<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.logreg.RegistroFragment">

    <ImageView
        android:id="@+id/imageViewCadastroBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleY="5.5"
        android:src="@drawable/background2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_cadastro"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_registro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/menu_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_senha_cadastro" />

    <TextView
        android:id="@+id/textView_cadastro_sorteio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/string_sorteio_cadastro"
        android:textColor="@color/cinza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_google" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_cadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hint_email_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_email"
            android:inputType="text|textEmailAddress|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_senha_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email_cadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hint_senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_senha"
            android:inputType="text|textPassword|textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_registro" />

</androidx.constraintlayout.widget.ConstraintLayout>